# zkid-sdk

./: .eslintrc.cjs  .gitignore  .prettierrc.cjs  .yarnrc.yml  CHANGELOG-v0.md  CHANGELOG.md  CONTRIBUTING.md  README.md  babel.config.cjs  jest.config.cjs  package-lock.json  package.json  test  tsconfig.base.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json
.changeset/: angry-coins-shake.md  beige-foxes-flash.md  bright-comics-pretend.md  bright-gifts-flash.md  bright-squids-guess.md  chatty-pans-begin.md  clean-plums-melt.md  cold-boats-hammer.md  config.json  curvy-badgers-decide.md  dirty-planes-dream.md  dry-cobras-rest.md  dry-cougars-yawn.md  dry-mice-check.md  dry-seals-kiss.md  early-sheep-fry.md  fast-cars-admire.md  gentle-scissors-yawn.md  good-forks-relate.md  good-swans-itch.md  hip-buckets-battle.md  hip-sloths-burn.md  hot-bulldogs-kick.md  hot-carrots-travel.md  kind-ducks-approve.md  large-sloths-laugh.md  late-fishes-kick.md  lazy-cooks-type.md  lemon-melons-wave.md  little-humans-sing.md  loud-apples-hug.md  metal-kings-tell.md  moody-dragons-happen.md  new-ladybugs-argue.md  nine-needles-eat.md  nine-shirts-fix.md  odd-bobcats-nail.md  pre.json  proud-goats-travel.md  silent-feet-build.md  (+11 more)
scripts/: build-wasm.js  install-build-deps.js
test-support/: package.json  (+1 more)
utility/miden/: CHANGELOG.md  Cargo.toml  README.md  package.json
utility/miden/src/: bytes.d.ts  bytes.js  index.spec.ts  index.ts  lib.rs  types.ts  wasm.ts
utility/miden/src/generate/: index.spec.ts  index.ts  prepare.ts  program.ts
utility/miden/src/rs/: miden.rs
(+188 files in other folders)
