[package]
authors = ["zCloak"]
description = "wasm miden libraries."
edition = "2021"
license = "Apache-2.0"
name = "wasm-miden"
publish = false
repository = "https://github.com/zCloak-Network/zkid-sdk/"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden-vm = {git = "https://github.com/zCloak-Network/miden", branch = "dev", default-features = false}
wasm-bindgen = "=0.2.84"

[dev-dependencies]
criterion = "0.3.3"
num-bigint = "0.3.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "z"
panic = "abort"
rpath = false

